[package]
name = "xscreensaver_wgpu"
version = "0.1.0"
authors = ["Fredrik Brännbacka <fredrik.brannbacka@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
libc = "0.2"
x11 = "2"
raw-window-handle = "0.4.3"
wgpu = "0.13.0"
env_logger = "0.9.0"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.17"
fps_clock = "2.0.0"
bytemuck = { version = "1.9.1", features = ["derive"] }
cgmath = "0.18.0"
